# ai-prophecy-court

./: .gitattributes  .gitignore  README.md
projects/ai-prophecy-court/: .env.example  README.md  pyproject.toml
projects/ai-prophecy-court/docs/: backlog.md  demo-script.md  deployment-status.md  github-pr-body.md  product-spec.md  social-post-drafts.md  submission-checklist.md
projects/ai-prophecy-court/docs/partners/: README.md
projects/ai-prophecy-court/hf-release/presence/: README.md
projects/ai-prophecy-court/open-design-mockup/: app.js  asset-manifest.md  case-lobby.html  design-reference.md  index.html  styles.css  trial-chamber.html  verdict-archive.html
projects/ai-prophecy-court/pipeline/: __init__.py  registry.yaml  submission_audit.py
projects/ai-prophecy-court/pipeline/docket/: __init__.py  candidates.py
projects/ai-prophecy-court/pipeline/normalize/: __init__.py  records.py
projects/ai-prophecy-court/runtime/: README.md  modal_app.py  model-manifest.yaml
projects/ai-prophecy-court/schemas/: docket.schema.json  normalized-content.schema.json  raw-envelope.schema.json
projects/ai-prophecy-court/scripts/: audit_submission.py  build_docket_candidates.py  build_hf_release.py  collect_linkedin_browser_use.py  collect_x_browser_use.py  hf.ps1
projects/ai-prophecy-court/space/: README.md  app.py  requirements.txt
projects/ai-prophecy-court/tests/: test_docket_candidates.py  test_linkedin_collector.py  test_modal_runtime_app.py  test_normalize.py  test_space_backend.py  test_submission_audit.py  test_x_browser_use.py
(+32 files in other folders)
