[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-prophecy-court-data"
version = "0.1.0"
description = "Browser Use collection and normalization pipeline for AI Prophecy Court"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyarrow>=20,<24",
  "pydantic>=2.11,<3",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23,<5",
  "pytest>=8.3,<10",
]
browser = [
  "browser-use>=0.13.1,<0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
